--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -12,23 +12,26 @@
         android:layout_height="wrap_content"
         android:background="@color/colorLightBlue"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="8dp"
+        tools:ignore="MissingConstraints">
 
         <Button
             android:id="@+id/buttonCreateAlarm"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_marginLeft="40dp"
-            android:layout_toEndOf="@+id/buttonDeleteAlarm"
             android:fontFamily="sans-serif"
             android:onClick="createNewAlarm"
             android:text="@string/label_setNewAlarm"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/black"
             android:textSize="14sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="40dp"
+            tools:ignore="RtlHardcoded" />
 
         <Button
             android:id="@+id/buttonDeleteAlarm"
@@ -42,7 +45,8 @@
             android:text="@string/label_deleteAlarm"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/holo_red_dark"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:ignore="RelativeOverlap,RtlHardcoded" />
 
     </RelativeLayout>
 
@@ -75,7 +79,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/alarmNameEdit"
-            android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="1"
             tools:ignore="MissingConstraints"
@@ -100,9 +103,10 @@
             android:id="@+id/buttonAddFlashCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@id/baseLayoutContainer"
-            android:layout_below="@id/baseLayoutContainer"
-            android:text="@string/label_addFlashCard"/>
+            android:text="@string/label_addFlashCard"
+            android:layout_below="@+id/baseLayoutContainer"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp" />
 
     </RelativeLayout>
 
