--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="62dp"
         android:onClick="alarmSetup"
-        android:text="Add Alarm"/>
+        android:text="@string/add_alarm"/>
 
     <Button
         android:id="@+id/button6"
@@ -24,35 +24,6 @@
         android:layout_marginStart="55dp"
         android:layout_toEndOf="@+id/button5"
         android:onClick="GotoQuestion"
-        android:text="Questions"/>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="410dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="43dp"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="51dp"
-                    android:text="TextView" />
-            </LinearLayout>
-        </ScrollView>
+        android:text="@string/questions" />
 
 </RelativeLayout>
