change the pop-up window listview

--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -43,7 +43,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/classid" />
+            android:text="@string/classid"
+            tools:ignore="LabelFor" />
 
         <TextView
             android:id="@+id/textView"
