--- a/app/src/main/res/layout/fc_pop.xml
+++ b/app/src/main/res/layout/fc_pop.xml
@@ -10,5 +10,12 @@
     <ListView
         android:id="@+id/fc_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="358dp"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onBackPresseda"
+        android:text="Button"/>
 </LinearLayout>
