--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -1,94 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/myCoordinatorLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="csuchico.smartnap.AlarmQuestions">
-
+    android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_width="365dp"
-        android:layout_height="576dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="-41dp"
         android:orientation="vertical"
-        android:weightSum="1"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:weightSum="1">
 
-        <TextView
-            android:id="@+id/textView8"
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/name"
+        android:visibility="invisible"
+        tools:ignore="LabelFor" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/new_question"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <EditText
+        android:id="@+id/classname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/classid"
+        tools:ignore="LabelFor" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.07"
+        android:text="@string/question"
+        android:textSize="24sp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.11">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
-            android:text="@string/textview"
-            android:visibility="invisible" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView4"
+            <EditText
+                android:id="@+id/fc_question"
+                android:layout_width="match_parent"
+                android:layout_height="196dp"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:text="@string/empty"
+                tools:ignore="LabelFor" />
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+        android:text="@string/answer"
+        android:textSize="24sp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.27">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/new_question"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/classname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="@string/classid"
-            tools:ignore="LabelFor" />
+            <EditText
+                android:id="@+id/fc_answer"
+                android:layout_width="match_parent"
+                android:layout_height="196dp"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                tools:ignore="LabelFor" />
+        </LinearLayout>
+    </ScrollView>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.07"
-            android:text="@string/question"
-            android:textSize="24sp" />
-
-        <EditText
-            android:id="@+id/fc_question"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.37"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            android:text="@string/empty"
-            tools:ignore="LabelFor" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.10"
-            android:text="@string/answer"
-            android:textSize="24sp" />
-
-        <EditText
-            android:id="@+id/fc_answer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.39"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            tools:ignore="LabelFor" />
-
-        <Button
-            android:id="@+id/save_fc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="savequestion"
-            android:text="@string/save"
-            tools:ignore="ButtonStyle" />
-
+    <Button
+        android:id="@+id/save_fc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="savequestion"
+        android:text="@string/save"
+        tools:ignore="ButtonStyle" />
     </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
