--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -51,7 +51,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.11">
+        android:layout_weight="0.11"
+        tools:ignore="NestedScrolling">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +81,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.27">
+        android:layout_weight="0.27"
+        tools:ignore="NestedScrolling">
 
         <LinearLayout
             android:layout_width="match_parent"
