--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -99,12 +99,32 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/save_fc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="savequestion"
-        android:text="@string/save"
-        tools:ignore="ButtonStyle" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/save_fc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/holo_blue_bright"
+                android:onClick="savequestion"
+                android:text="@string/save"
+                tools:ignore="ButtonStyle" />
+
+            <Button
+                android:id="@+id/delete"
+                style="@style/?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/holo_red_light"
+                android:text="@string/delete"
+                android:visibility="gone" />
+        </LinearLayout>
+
     </LinearLayout>
+
 </ScrollView>
