--- a/app/src/main/res/layout/l_item.xml
+++ b/app/src/main/res/layout/l_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/clock"
         android:layout_toLeftOf="@+id/toggle_view"/>
+    //change from button to checkbox
     <Switch
         android:id="@+id/toggle_view"
         android:layout_width="wrap_content"
@@ -22,8 +23,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         />
-    <!--<TextView-->
-    <!--android:id="@+id/index_text_view"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content" />-->
+
 </RelativeLayout>
