--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
@@ -16,7 +17,7 @@
         android:layout_width="405dp"
         android:layout_height="46dp"
         android:text="@string/QuestionSet"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textSize="24sp" />
 
     <ListView
